Check Android copies against the Gradle cache they come from
e6f08c5b made the JNI copy require its source inside the job directory, but the jni/ folders
of Gradle-resolved AARs are in the shared Gradle cache, outside it by design. Every Android
build whose dependencies ship native libraries failed: extension-firebase-analytics (via
androidx datastore-core) on armv7-android and arm64-android, "…/transformed/…/jni resolves to
…, outside /tmp/jobN".

resolve() now records the Gradle cache, and a copy from an exploded artifact is checked against
it; everything else is still checked against the job directory. Every Gradle resolve can write
to that cache, so it is a root of its own: a link out of it is refused like one out of the job.

The asset and resource copies next to it were plain FileUtils.copyDirectory and followed links
into the APK; they take the same check now, and packages.txt goes through JobFiles. The C#
dmsdk copy removes a link left at <job>/cs-dmsdk instead of copying through it.

Verified on the Windows host: firebase-analytics passes on both Android platforms, and the
IntegrationTest arm64-android smoke passes (19 passed, 2 skipped).